force-app/main/default/objects/Account/fields/ARC_Id__c.field-meta.xml
<CustomField>
    <fullName>ARC_Id__c</fullName>
    <label>ARC Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>