force-app/main/default/objects/Account/fields/ARC_Publisher_Name__c.field-meta.xml
<CustomField>
    <fullName>ARC_Publisher_Name__c</fullName>
    <label>ARC Publisher Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>