force-app/main/default/objects/Account/fields/Co_located_Organisations__c.field-meta.xml
<CustomField>
    <fullName>Co_located_Organisations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co-located Organisations</label>
    <type>Checkbox</type>
</CustomField>