force-app/main/default/objects/Account/fields/Finance_ABN__c.field-meta.xml
<CustomField>
    <fullName>Finance_ABN__c</fullName>
    <label>Finance ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>