force-app/main/default/objects/Account/fields/Finance_Status__c.field-meta.xml
<CustomField>
    <fullName>Finance_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Status</label>
    <type>Checkbox</type>
</CustomField>