force-app/main/default/objects/Account/fields/Funder_ID__c.field-meta.xml
<CustomField>
    <fullName>Funder_ID__c</fullName>
    <label>RP Funder ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>