force-app/main/default/objects/Account/fields/Funder_Region__c.field-meta.xml
<CustomField>
    <fullName>Funder_Region__c</fullName>
    <label>Funder Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>