force-app/main/default/objects/Account/fields/Funder_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Funder_Region_Code__c</fullName>
    <label>Funder Region Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>