force-app/main/default/objects/Account/fields/Include_GST_In_Budgeting__c.field-meta.xml
<CustomField>
    <fullName>Include_GST_In_Budgeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include GST In Budgeting</label>
    <type>Checkbox</type>
</CustomField>