force-app/main/default/objects/Account/fields/Industry_Classification__c.field-meta.xml
<CustomField>
    <fullName>Industry_Classification__c</fullName>
    <label>Industry Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture, Forestry And Fishing</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Electricity, Gas, Water And Waste Services</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Wholesale Trade</fullName>
            </value>
            <value>
                <fullName>Retail Trade</fullName>
            </value>
            <value>
                <fullName>Accommodation And Food Services</fullName>
            </value>
            <value>
                <fullName>Transport Postal And Warehousing</fullName>
            </value>
            <value>
                <fullName>Information Media And Telecommunications</fullName>
            </value>
            <value>
                <fullName>Financial And Insurance Services</fullName>
            </value>
            <value>
                <fullName>Rental, Hiring And Real Estate Services</fullName>
            </value>
            <value>
                <fullName>Professional, Scientific And Technical Services</fullName>
            </value>
            <value>
                <fullName>Administrative And Support Services</fullName>
            </value>
            <value>
                <fullName>Public Administration And Safety</fullName>
            </value>
            <value>
                <fullName>Education And Training</fullName>
            </value>
            <value>
                <fullName>Health Care And Social Assistance</fullName>
            </value>
            <value>
                <fullName>Arts And Recreation Services</fullName>
            </value>
            <value>
                <fullName>Other Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>