force-app/main/default/objects/Account/fields/JCU_is_a_participant__c.field-meta.xml
<CustomField>
    <fullName>JCU_is_a_participant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>My Uni is a participant?</label>
    <type>Checkbox</type>
</CustomField>