force-app/main/default/objects/Account/fields/Maximum_Allowed_On_Cost__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Allowed_On_Cost__c</fullName>
    <label>Maximum Allowed On-Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>