force-app/main/default/objects/Account/fields/Organisation_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Contact_Email__c</fullName>
    <label>Organisation Email</label>
    <type>Email</type>
</CustomField>