force-app/main/default/objects/Account/fields/Organisation_Head__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Organisation</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Organisations</relationshipName>
    <type>Lookup</type>
</CustomField>