force-app/main/default/objects/Account/fields/Part_of_My_Uni__c.field-meta.xml
<CustomField>
    <fullName>Part_of_My_Uni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part of My Uni</label>
    <type>Checkbox</type>
</CustomField>