force-app/main/default/objects/Account/fields/Type_of_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Organisation__c</fullName>
    <label>Organisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SME (small to medium enterprise)</fullName>
            </value>
            <value>
                <fullName>Government – International</fullName>
            </value>
            <value>
                <fullName>Government – Federal</fullName>
            </value>
            <value>
                <fullName>Government – State</fullName>
            </value>
            <value>
                <fullName>Government – Local</fullName>
            </value>
            <value>
                <fullName>Large Corporate – Australian</fullName>
            </value>
            <value>
                <fullName>Large Corporate – Multinational</fullName>
            </value>
            <value>
                <fullName>Large Corporate</fullName>
            </value>
            <value>
                <fullName>Non-government organisation (NGO)</fullName>
            </value>
            <value>
                <fullName>Not for profit</fullName>
            </value>
            <value>
                <fullName>Publicly funded research organisation (PRFO)</fullName>
            </value>
            <value>
                <fullName>Cooperative Research Centre (CRC)</fullName>
            </value>
            <value>
                <fullName>Hospitals</fullName>
            </value>
            <value>
                <fullName>Grant bodies</fullName>
            </value>
            <value>
                <fullName>Trusts and Foundations</fullName>
            </value>
            <value>
                <fullName>Funds / Venture Capital</fullName>
            </value>
            <value>
                <fullName>Start-ups</fullName>
            </value>
            <value>
                <fullName>Schools &amp; Higher Education</fullName>
            </value>
            <value>
                <fullName>Business Organisation</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Centre</fullName>
            </value>
            <value>
                <fullName>Institute</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>