force-app/main/default/objects/Account/recordTypes/External_Organisation.recordType-meta.xml
<RecordType>
    <fullName>External_Organisation</fullName>
    <active>true</active>
    <description>Any organistion outside of my university, which: conduct, host, sponsor or fund research; employ, support or host researchers; teach research students; or allow research to be carried out under their auspices</description>
    <label>External Organisation</label>
</RecordType>