force-app/main/default/objects/Account/recordTypes/Internal_Organisational_Unit.recordType-meta.xml
<RecordType>
    <fullName>Internal_Organisational_Unit</fullName>
    <active>true</active>
    <description>Any organisational units within my university such as departments, colleges, schools, research centres, research offie, library</description>
    <label>Internal Organisational Unit</label>
</RecordType>