force-app/main/default/objects/Account/listViews/Centre_Listing.listView-meta.xml
<ListView>
    <fullName>Centre_Listing</fullName>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Organisation__c</field>
        <operation>equals</operation>
        <value>Centre</value>
    </filters>
    <label>Centre Listing</label>
</ListView>