force-app/main/default/objects/Account/listViews/Institute_Listing.listView-meta.xml
<ListView>
    <fullName>Institute_Listing</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Organisation__c</field>
        <operation>equals</operation>
        <value>Institute</value>
    </filters>
    <label>Institute Listing</label>
</ListView>